<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.xeiam.xchange</groupId>
	<artifactId>xchange-parent</artifactId>
	<version>1.10.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>XChange Parent</name>
	<description>XChange is a Java library providing a simple and consistent API for interacting with a diverse set of financial security exchanges including Bitcoin.</description>

	<url>http://xeiam.com</url>
	<inceptionYear>2012</inceptionYear>

	<organization>
		<name>Xeiam, LLC</name>
		<url>http://xeiam.com</url>
	</organization>

	<developers>
		<developer>
			<name>Tim Molter</name>
		</developer>
		<developer>
			<name>Gary Rowe</name>
			<email>g.rowe@froot.co.uk</email>
		</developer>
		<developer>
			<name>Matija Mazi</name>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>MIT</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
			<distribution>repo</distribution>
			<comments>All source code is under the MIT license.</comments>
		</license>
	</licenses>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/timmolter/XChange/issues</url>
	</issueManagement>

	<distributionManagement>
		<snapshotRepository>
			<id>sonatype-nexus-snapshots</id>
			<name>Sonatype Nexus Snapshots</name>
			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>sonatype-nexus-staging</id>
			<name>Nexus Release Repository</name>
			<url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
		<downloadUrl>https://oss.sonatype.org/content/groups/public/com/xeiam/xchange</downloadUrl>
	</distributionManagement>

	<scm>
		<connection>scm:git:git@github.com:timmolter/XChange.git</connection>
		<developerConnection>scm:git:git@github.com:timmolter/XChange.git</developerConnection>
		<url>git@github.com:timmolter/XChange.git</url>
		<tag>HEAD</tag>
	</scm>

	<ciManagement>
		<url>https://travis-ci.org/timmolter/XChange</url>
	</ciManagement>

	<modules>
		<module>xchange-core</module>
		<module>xchange-bitcoincharts</module>
		<!-- <module>xchange-bitcoinium</module> -->
		<module>xchange-bitcurex</module>
		<module>xchange-bitstamp</module>
		<module>xchange-blockchain</module>
		<module>xchange-btcchina</module>
		<module>xchange-btce</module>
		<module>xchange-campbx</module>
		<module>xchange-cavirtex</module>
		<module>xchange-examples</module>
		<module>xchange-kraken</module>
		<module>xchange-openexchangerates</module>
		<module>xchange-mtgox</module>
		<module>xchange-bitcoinaverage</module>
	</modules>

	<repositories>
		<repository>
			<id>sonatype-oss-public</id>
			<url>https://oss.sonatype.org/content/groups/public/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>

			<!-- Logging is through SLF4J -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.7.5</version>
			</dependency>

			<!-- SLF4J implementation for use in testing -->
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.0.13</version>
				<!-- Test scope prevents this implementation bleeding out to consuming 
					applications -->
				<scope>test</scope>
			</dependency>

			<!-- All money handling is through Joda Money -->
			<dependency>
				<groupId>org.joda</groupId>
				<artifactId>joda-money</artifactId>
				<!-- Require 0.8+ to support Bitcoin (see #40) -->
				<version>0.9</version>
			</dependency>

			<!-- Charting -->
			<dependency>
				<groupId>com.xeiam.xchart</groupId>
				<artifactId>xchart</artifactId>
				<version>2.2.1</version>
			</dependency>

			<!-- Websocket library -->
			<dependency>
				<groupId>org.java-websocket</groupId>
				<artifactId>Java-WebSocket</artifactId>
				<version>1.3.0</version>
			</dependency>

			<!-- Rest client -->
			<dependency>
				<groupId>com.github.mmazi</groupId>
				<artifactId>rescu</artifactId>
				<version>1.5.0</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<!-- All children will have these dependencies -->
	<dependencies>

		<!-- JUnit for testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>

		<!-- FEST for fluent test assertions -->
		<dependency>
			<groupId>org.easytesting</groupId>
			<artifactId>fest-assert-core</artifactId>
			<version>2.0M10</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<profiles>
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.4</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<!-- use: mvn clean integration-test -P run-integration-tests -->
		<!-- http://maven.apache.org/surefire/maven-surefire-plugin/test-mojo.html#groups -->
		<profile>
			<id>run-integration-tests</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>${maven-surefire-plugin.version}</version>
						<configuration>
							<excludedGroups>none</excludedGroups>
							<skip>false</skip>
							<!-- <skipTests>false</skipTests> -->
							<useFile>false</useFile>
							<argLine>-Xms1024m -Xmx1024m -XX:MaxPermSize=512m</argLine>
							<excludes>
								<exclude>none</exclude>
							</excludes>
							<includes>
								<include>**/*Test*.java</include>
								<include>**/*Test.java</include>
								<!-- <include>**/*TestCase.java</include> -->
							</includes>
						</configuration>
						<executions>
							<execution>
								<id>integration-tests</id>
								<phase>integration-test</phase>
								<goals>
									<goal>test</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<!-- Ensure compilation is done under Java 6 in all environments -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<showDeprecation>true</showDeprecation>
					<showWarnings>true</showWarnings>
				</configuration>
			</plugin>
			<!-- Generates a source code JAR during package -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Generates a Javadoc JAR during package -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Generate artifacts including dependencies -->
			<!-- <plugin> -->
			<!-- <groupId>org.apache.maven.plugins</groupId> -->
			<!-- <artifactId>maven-shade-plugin</artifactId> -->
			<!-- <version>2.1</version> -->
			<!-- <executions> -->
			<!-- <execution> -->
			<!-- <phase>package</phase> -->
			<!-- <goals> -->
			<!-- <goal>shade</goal> -->
			<!-- </goals> -->
			<!-- <configuration> -->
			<!-- <shadedArtifactAttached>true</shadedArtifactAttached> -->
			<!-- <shadedClassifierName>with-dependencies</shadedClassifierName> -->
			<!-- <transformers> -->
			<!-- <transformer implementation="org.apache.maven.plugins.shade.resource.ComponentsXmlResourceTransformer" /> -->
			<!-- </transformers> -->
			<!-- </configuration> -->
			<!-- </execution> -->
			<!-- </executions> -->
			<!-- </plugin> -->
			<!-- for deploying to Maven Central -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.4.1</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>
			<!-- normally don't run the test classes annotated with @OnlineTest -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>${maven-surefire-plugin.version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<excludedGroups>com.xeiam.xchange.OnlineTest</excludedGroups>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>${maven-surefire-plugin.version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<excludedGroups>com.xeiam.xchange.OnlineTest</excludedGroups>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Use the Enforcer to verify build integrity -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>1.2</version>
				<executions>
					<execution>
						<id>enforce</id>
						<phase>verify</phase>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<digestRule implementation="uk.co.froot.maven.enforcer.DigestRule">

									<!-- Create a snapshot to build the list of URNs below -->
									<buildSnapshot>true</buildSnapshot>

									<!-- List of required hashes -->
									<!-- Format is URN of groupId:artifactId:version:type:classifier:scope:hash -->
									<!-- classifier is "null" if not present -->
									<urns>

										<urn>com.fasterxml.jackson.core:jackson-annotations:2.1.1:jar:null:compile:0b01cc83e745fc4425a3968fafbf8e5b8254a6dd</urn>
										<urn>com.fasterxml.jackson.core:jackson-core:2.1.1:jar:null:compile:82ad1c5f92f6dcc6291f5c46ebacb975eaa844de</urn>
										<urn>com.fasterxml.jackson.core:jackson-databind:2.1.1:jar:null:compile:38d2b3c0c89af5b937fd98c3e558bf6b58c14aa2</urn>
										<urn>com.github.mmazi:rescu:1.2.0:jar:null:compile:6e47e5ec971e6f5cb57295e13a368fc13b72f7c8</urn>
										<urn>com.google.code.findbugs:jsr305:2.0.1:jar:null:compile:516c03b21d50a644d538de0f0369c620989cd8f0</urn>
										<urn>javax.ws.rs:jsr311-api:1.1.1:jar:null:compile:59033da2a1afd56af1ac576750a8d0b1830d59e6</urn>
										<urn>junit:junit:4.11:jar:null:test:4e031bb61df09069aeb2bffb4019e7a5034a4ee0</urn>
										<urn>org.apache.maven.plugins:maven-clean-plugin:2.4.1:maven-plugin:null:runtime:c3ad1d9e5ee3daeac15f8e18e987a214bbaa343a</urn>
										<urn>org.apache.maven.plugins:maven-compiler-plugin:3.1:maven-plugin:null:runtime:9977a8d04e75609cf01badc4eb6a9c7198c4c5ea</urn>
										<urn>org.apache.maven.plugins:maven-deploy-plugin:2.5:maven-plugin:null:runtime:5965038c8d7bf2585e63fa2d82eab121f38d67c3</urn>
										<urn>org.apache.maven.plugins:maven-enforcer-plugin:1.2:maven-plugin:null:runtime:6b755a9a0d618f8f57c0b5c4a0737a012e710a46</urn>
										<urn>org.apache.maven.plugins:maven-failsafe-plugin:2.15:maven-plugin:null:runtime:e03485e31ddc8e4b35668ef0430716198b5554ed</urn>
										<urn>org.apache.maven.plugins:maven-install-plugin:2.3.1:maven-plugin:null:runtime:fe692c15450a75d330510bffe9491264918f58e0</urn>
										<urn>org.apache.maven.plugins:maven-jar-plugin:2.3.1:maven-plugin:null:runtime:d68ebba6196c6382a496660e3bb477474516f915</urn>
										<urn>org.apache.maven.plugins:maven-javadoc-plugin:2.9.1:maven-plugin:null:runtime:95ea7abf00e37e08bd927bf7e448c1e7fe4c6cb9</urn>
										<urn>org.apache.maven.plugins:maven-release-plugin:2.4.1:maven-plugin:null:runtime:983dba8fec0ea4df0788a2828f35eb6d5a870b7d</urn>
										<urn>org.apache.maven.plugins:maven-resources-plugin:2.4.3:maven-plugin:null:runtime:ac5c1dd6efa6a32b5c2b2628b9afaa473dcff8ad</urn>
										<urn>org.apache.maven.plugins:maven-site-plugin:2.0.1:maven-plugin:null:runtime:fb2e82e6983c19c8ce8aeeadcd529acee57bd6c1</urn>
										<urn>org.apache.maven.plugins:maven-source-plugin:2.2.1:maven-plugin:null:runtime:7b6e93e5e6403323cd70a18829a33f6cb4c0388d</urn>
										<urn>org.apache.maven.plugins:maven-surefire-plugin:2.15:maven-plugin:null:runtime:6c69fc766b25fea8b70d4bf0cc05e4e569e92f21</urn>
										<urn>org.easytesting:fest-assert-core:2.0M10:jar:null:test:cb7c91cf614901928ae405f19d9bcdedf82781db</urn>
										<urn>org.easytesting:fest-util:1.2.5:jar:null:test:c4a8d7305b23b8d043be12c979813b096df11f44</urn>
										<urn>org.hamcrest:hamcrest-core:1.3:jar:null:test:42a25dc3219429f0e5d060061f71acb49bf010a0</urn>
										<urn>org.java-websocket:Java-WebSocket:1.3.0:jar:null:compile:db2658f013fb163de4a99274c2eb9e17efe535d2</urn>
										<urn>org.joda:joda-money:0.8:jar:null:compile:29e5cdf8cb4af8fffb0b013b1dc63d493cb02115</urn>
										<urn>org.slf4j:slf4j-api:1.7.2:jar:null:compile:0081d61b7f33ebeab314e07de0cc596f8e858d97</urn>

									</urns>

								</digestRule>
							</rules>
						</configuration>
					</execution>
				</executions>

				<!-- Ensure we download the enforcer rules -->
				<dependencies>
					<dependency>
						<groupId>uk.co.froot.maven.enforcer</groupId>
						<artifactId>digest-enforcer-rules</artifactId>
						<version>0.0.1</version>
					</dependency>
				</dependencies>

			</plugin>
			<!-- for header in all .java files -->
			<plugin>
				<groupId>com.mycila.maven-license-plugin</groupId>
				<artifactId>maven-license-plugin</artifactId>
				<version>1.10.b1</version>
				<configuration>
					<header>etc/header.txt</header>
					<aggregate>true</aggregate>
					<includes>
						<include>**/*.java</include>
					</includes>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<!-- Versioning -->
		<maven-surefire-plugin.version>2.15</maven-surefire-plugin.version>

	</properties>

</project>